--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
 
 
     </div>
+
     <div class="carte">
-
     </div>
-    <footer>
-      <p id="design">Design by Youssef</p>
 
+
+    <footer>
+      <p id="design">Design by <span class="titre"> Youssef</span> </p>
     </footer>
 
 
